Refatorado para Azure. Client e envio http na mão, sem lib Azure. Incompatibilidade com Netty.